# 2LEOD

./: .gitattributes  36_config.py  36_train.py  README.md  cluster_quality.py  compare_models.py  config.py  data_utils.py  logger.py  models.py  realtime_encoder.py  render_cluster_video.py  requirements.txt  test.py  train.py  visualize_clusters.py
checkpoints/: linear_wall_checkpoint.json
dataFiles/: example_csv_format.csv  example_csv_format_feature_index.json  example_yaml_format.yaml  iccas_track_1.csv  iccas_track_1_fast.csv  iccas_track_2.csv  iccas_track_2_fast.csv  iccas_track_odom_output_1.csv  iccas_track_odom_output_1_fast.csv  iccas_track_odom_output_2.csv  iccas_track_odom_output_2_fast.csv  odom_output_1.csv  odom_output_3.csv  one_hairpin_1.csv  one_hairpin_1_fast.csv  one_hairpin_2.csv  one_hairpin_2_fast.csv  one_hairpin_odom_output_1.csv  one_hairpin_odom_output_1_fast.csv  one_hairpin_odom_output_2.csv  one_hairpin_odom_output_2_fast.csv  output_0.yaml  output_0_feature_index.json  output_1.yaml  simple_box_1.csv  simple_box_1_fast.csv  simple_box_2.csv  simple_box_2_fast.csv  simple_box_odom_output_1.csv  simple_box_odom_output_1_fast.csv  simple_box_odom_output_2.csv  simple_box_odom_output_2_fast.csv  two_Lshape_inner.csv  two_Lshape_inner_fast.csv  two_Lshape_inner_fast_odom_output.csv  two_Lshape_inner_odom_output.csv  two_Lshape_outer.csv  two_Lshape_outer_fast.csv  two_Lshape_outer_fast_odom_output.csv  two_Lshape_outer_odom_output.csv  (+8 more)
linear_regression_metadata/: linear_regression_metadata_1764763011.json
models/: 100_opponent_bundle_svm.joblib  1e2_opponent_bundle_svm.joblib  30_opponent_bundle_logreg.joblib  36_opponent_bundle_logreg.joblib  36_opponent_bundle_svm.joblib  36_opponent_bundle_xgb.joblib  36_over_opponent_bundle_svm.joblib  3e1_opponent_bundle_logreg.joblib  3e3_opponent_bundle_logreg.joblib  Linearregression.py  LogisticRegression.py  __init__.py  depth12_opponent_bundle_xgb.joblib  depth2_opponent_bundle_xgb.joblib  depth4_opponent_bundle_xgb.joblib  ensemble.py  iccas_opponent_bundle_logreg.joblib  iccas_opponent_bundle_xgb.joblib  linear_regression.py  (+14 more)
opponent_tracker/: CMakeLists.txt  evaluate_opponent.py  package.xml  setup.cfg  setup.py
opponent_tracker/config/: eval_opponent.yaml  opponent_tracker.yaml  tf_qos_overrides.yaml
opponent_tracker/launch/: eval_opponent_bag.launch.py  opponent_tracker.launch.py
opponent_tracker/opponent_tracker/: __init__.py  feature_builder.py  opponent_odom_node.py
opponent_tracker/rviz/: eval_opponent.rviz
(+22 files in other folders)
